--- a/payment/payment.css
+++ b/payment/payment.css
@@ -103,7 +103,13 @@ line-height: 180%; /* 43.2px */
 
 @media (max-width: 500px) {
   .payment__block__flex img{
-    width: 50%;
+    width: 60%;
+    margin-bottom: 10px;
+  }
+  .payment__block__flex{
+    flex-direction: column-reverse;
+    align-items: start;
+    margin-top: 20px;
   }
 }
 @media (max-width: 280px) {
