--- a/mainv2/style.css
+++ b/mainv2/style.css
@@ -8,7 +8,7 @@
 a {
   text-decoration: none;
   display: block;
-  color: inherit;
+  color: inherit !important;
 }
 .m_v2_service {
   display: grid;
@@ -52,6 +52,7 @@ a {
   border-radius: 28px;
   overflow: hidden;
   margin-bottom: 40px;
+  background-color: white;
 }
 .m_v2__search input {
   width: 100%;
@@ -91,19 +92,19 @@ a {
 }
 .m_v2_categories_button img {
   width: 16px;
-  transition: all 0.1s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .catalog_window {
   background-color: rgb(47, 70, 134);
   max-height: 0;
-  transition: max-height 0.1s ease-in-out;
+  transition: max-height 0.2s ease-in-out;
 }
 .catalog_window + .active {
   max-height: auto;
 }
 .catalog_window__btn {
   padding: 24px 0px;
-  transition: all 0.1s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .arrow_rotate {
@@ -125,10 +126,11 @@ a {
 }
 .subcategory a {
   padding: 20px 0px;
+  color: white;
 }
 .subcategory {
   max-height: 0;
-  transition: max-height 0.1s ease-in-out;
+  transition: max-height 0.2s ease-in-out;
   background-color: rgb(56, 84, 161);
   color: white;
   overflow: hidden;
@@ -140,7 +142,19 @@ a {
 .subcategory a {
   padding: 20px 0px;
 }
-
+.m_v2_history h2 {
+  font-weight: 800;
+}
+.m_v2_history__grid img {
+  width: 100%;
+  height: 500px;
+  background-color: antiquewhite;
+}
+.m_v2_history__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
 @media (max-width: 600px) {
   .m_v2_history__grid__block {
     height: 300px;
