--- a/mainv2/style.css
+++ b/mainv2/style.css
@@ -18,15 +18,15 @@ a {
 }
 
 .m_v2_service a {
-  background-color: rgb(39, 59, 114);
-  padding: 20px 20px;
-  border-radius: 20px;
+  background-color: #003362;
+  padding: 20px 00px;
+  border-radius: 8px;
   font-size: 20px;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: 600;
+  font-weight: 500;
 
   text-align: center;
 }
@@ -36,7 +36,7 @@ a {
   justify-content: space-between;
   font-size: 20px;
   font-weight: 600;
-  color: rgb(117, 117, 117);
+  color: rgb(163 163 163);
   margin-bottom: 10px;
   padding: 0px 10px;
 }
@@ -49,7 +49,7 @@ a {
   justify-content: space-between;
   border: 3px solid rgb(216, 216, 216);
   padding: 6px;
-  border-radius: 28px;
+  border-radius: 18px;
   overflow: hidden;
   margin-bottom: 40px;
   background-color: white;
@@ -59,33 +59,37 @@ a {
   border: none;
   padding: 14px 0px 14px 10px;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
 }
 .m_v2__search__btn {
   padding: 0px 20px;
-  border-radius: 20px;
+  border-radius: 8px;
   border: none;
   font-size: 20px;
   font-weight: 600;
-  background-color: rgb(47, 90, 207);
+  background-color: #1c80dd;
   color: white;
+}
+.row {
+  margin-top: 10px !important;
 }
 .m_v2_categories {
   width: 40%;
   text-align: center;
   font-size: 20px;
-  font-weight: 700;
-  background-color: rgb(39, 59, 114);
+  font-weight: 500;
+  background-color: #003362;
   color: white;
-  border-radius: 20px;
+  border-radius: 8px;
   overflow: hidden;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 .m_v2_categories_button {
+  cursor: pointer;
   display: flex;
   justify-content: center;
   padding: 24px 0px;
-  border-radius: 20px;
+  border-radius: 8px;
 }
 .m_v2_categories_button div:first-child {
   margin-right: 8px;
@@ -95,7 +99,7 @@ a {
   transition: all 0.2s ease-in-out;
 }
 .catalog_window {
-  background-color: rgb(47, 70, 134);
+  background-color: #00417e;
   max-height: 0;
   transition: max-height 0.2s ease-in-out;
 }
@@ -103,6 +107,7 @@ a {
   max-height: auto;
 }
 .catalog_window__btn {
+  cursor: pointer;
   padding: 24px 0px;
   transition: all 0.2s ease-in-out;
 }
@@ -122,16 +127,16 @@ a {
   width: 100%;
   height: 400px;
   background-color: rgb(228, 228, 228);
-  border-radius: 20px;
+  border-radius: 8px;
 }
 .subcategory a {
   padding: 20px 0px;
-  color: white;
+  color: white !important;
 }
 .subcategory {
   max-height: 0;
   transition: max-height 0.2s ease-in-out;
-  background-color: rgb(56, 84, 161);
+  background-color: #004b92;
   color: white;
   overflow: hidden;
 }
@@ -139,9 +144,7 @@ a {
 .catalog_window__btn.active + .subcategory {
   max-height: auto;
 }
-.subcategory a {
-  padding: 20px 0px;
-}
+
 .m_v2_history h2 {
   font-weight: 800;
 }
@@ -178,6 +181,6 @@ a {
     grid-template-columns: 1fr;
   }
   .m_v2_service a {
-    padding: 24px 40px;
+    padding: 24px 0px;
   }
 }
